welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: ';' expected but 'return' found.
  if (noDoubles==true){if (die1==die2){if (die1==6){return die1+1}return die1+die2+1};return die1+die2}
                                                                  ^